# Habbit_tracker

./: .coverage  .env.sample  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
config/: celery.py  settings.py
tracker/: admin.py  models.py  services.py  tasks.py  tests.py  views.py
tracker/migrations/: 0001_initial.py  0002_habits_last_action_date.py
users/migrations/: 0002_user_tg_id.py
